AUTOMAKE_OPTIONS = subdir-objects
SRC = ../../src
bindir = ../build
bin_PROGRAMS = EWOCvj2
EWOCvj2_SOURCES = $(SRC)/osc.cpp $(SRC)/loopstation.cpp $(SRC)/node.cpp $(SRC)/bins.cpp $(SRC)/mixer.cpp 
$(SRC)/program.cpp $(SRC)/start.cpp

CFLAGS = -g3
CXXFLAGS = -std=c++17 -fpermissive -g3 -I/usr/include/rtmidi -I/usr/include/ffmpeg -I/usr/include/freetype2
