AUTOMAKE_OPTIONS = subdir-objects
VPATH=../../src
bindir = ../build
bin_PROGRAMS = EWOCvj2
EWOCvj2_SOURCES = osc.cpp loopstation.cpp node.cpp bins.cpp mixer.cpp program.cpp start.cpp

CFLAGS = -g3
CXXFLAGS = -std=c++17 -fpermissive -g3 -I/usr/include/rtmidi -I/usr/include/ffmpeg -I/usr/include/freetype2
