AUTOMAKE_OPTIONS = subdir-objects
SUBDIRS=../../src
bindir = ../build
bin_PROGRAMS = EWOCvj2
EWOCvj2_SOURCES = osc.cpp loopstation.cpp node.cpp bins.cpp mixer.cpp program.cpp start.cpp

CFLAGS = -O3
CXXFLAGS = -std=c++17 -fpermissive -O3 -I/usr/include/rtmidi -I/usr/include/ffmpeg -I/usr/include/freetype2